# video2code

./: .dockerignore  .gitignore  README.md  TODO.md  docker-compose-local.yml  docker-compose.yml
client/: .dockerignore  Dockerfile  package-lock.json  package.json  svelte.config.js
client/src/: app.css  app.html
client/src/lib/: dataTypes.ts  helpers.ts  tests.ts
client/src/lib/components/: CodeExtract.svelte  VideoBrowser.svelte
client/src/routes/: +layout.svelte  +page.svelte
design/: design-evidencing-guide.md  persona.md  readme.md
nginx/: local_nginx.conf  nginx.conf
server/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
server/adv_ui_ocrroo_project/: .env.sample  manage.py
server/adv_ui_ocrroo_project/adv_ui_ocrroo_app/: apps.py  helpers.py  throttles.py  urls.py  views.py
server/adv_ui_ocrroo_project/adv_ui_ocrroo_project/: asgi.py  settings.py  urls.py  wsgi.py
